--- a/PAT_Basic/1022 D进制的A+B/1022（头发是怎么掉光的）.md
+++ b/PAT_Basic/1022 D进制的A+B/1022（头发是怎么掉光的）.md
@@ -1,5 +1,11 @@
 1022（头发是怎么掉光的）
 
+> 看错题引发的命案:slightly_smiling_face:
+
+【看错题之后】
+
+<u>**看成a、b都是longlongint**</u>
+
 第一种思路：
 
 1. 进制转换是所有余数的倒序，把所有余数挨个求出来之后放字符串里，最后reverse输出
@@ -30,7 +36,13 @@
 		temp = (temp*10 + s[i] - '0') % b;
 	}	
 ？
-//我觉得temp*10+S[0]-'0'这个操作很好换成temp=stoi(sum.substr(i, 2))
+//我觉得temp*10+S[0]-'0'这个操作很好换成temp=stoi(sum.substr(i-1, 2))
 /*temp是余数，for-t组成了一次完整的取整*/
 ```
+
+【发现看错题】
+
+？？？其实就是贼简单的进制转换啊我为什么还看成了长整型转换
+
+不怕算法难就怕语言基础差:slightly_smiling_face:
 
