--- a/Leetcode/001 Two Sum/001(用了哈希表) h.md
+++ b/Leetcode/001 Two Sum/001(用了哈希表) h.md
@@ -17,3 +17,7 @@ http://www.cplusplus.com/reference/map/map/find/
 大概就是这样
 
 然后要注意给出的函数返回值类型
+
+
+
+update：懂了map的find(),和set一样，找到了返回迭代器，找不到那个元素就返回m.end()，所以m.find(i)  !=  m.end()的意思就是这个元素能够在映射m里找到。
